--- a/UserManager.Api/appsettings.json
+++ b/UserManager.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultString": "Server=INTERN-LMTHANH1\\SQLEXPRESS01;Database=UserManager;Trusted_Connection=True;encrypt=false"
+    "DefaultString": "Server=DESKTOP-VVF1AMR\\SQLEXPRESS03;Database=UserManager;Trusted_Connection=True;encrypt=false"
   },
   "Logging": {
     "LogLevel": {
@@ -10,9 +10,17 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "ValidAudience": "User",
-    "ValidIssuer": "http://localhost:9000",
+    "ValidAudience": "UserTest",
+    "ValidIssuer": "http://localhost:7028",
     "Secret": "MINHTHANHSECRETKEY123456789",
-    "SecretRefresh": "MINHTHANHSECRETKEY123456789TRANTHIKIMANH"
+    "SecretRefresh": "MINHTHANHSECRETKEY123456789TRANTHIKIMANH",
+    "RefreshTokenValidityInDays": 7
+  },
+  "EmailConfiguration": {
+    "From": "luongminhthanh91@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "UserName": "luongminhthanh91@gmail.com",
+    "Password": "ynyugaoiurbekgwv"
   }
 }
