Send Response To Differrence Service

--- a/UserManager.Api/appsettings.json
+++ b/UserManager.Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  //DESKTOP-VVF1AMR\\SQLEXPRESS03 INTERN-LMTHANH1\\SQLEXPRESS01
   "ConnectionStrings": {
     "DefaultString": "Server=DESKTOP-VVF1AMR\\SQLEXPRESS03;Database=UserManager;Trusted_Connection=True;encrypt=false"
   },
@@ -11,7 +12,7 @@
   "AllowedHosts": "*",
   "JWT": {
     "ValidAudience": "UserTest",
-    "ValidIssuer": "http://localhost:7028",
+    "ValidIssuer": "https://localhost:9001",
     "Secret": "MINHTHANHSECRETKEY123456789",
     "SecretRefresh": "MINHTHANHSECRETKEY123456789TRANTHIKIMANH",
     "RefreshTokenValidityInDays": 7
@@ -21,6 +22,6 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "UserName": "luongminhthanh91@gmail.com",
-    "Password": "ynyugaoiurbekgwv"
+    "Password": "gspqilkwzxhkrqtw"
   }
 }
