--- a/UserManager.Api/appsettings.json
+++ b/UserManager.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   //DESKTOP-VVF1AMR\\SQLEXPRESS03 INTERN-LMTHANH1\\SQLEXPRESS01
   "ConnectionStrings": {
-    "DefaultString": "Server=DESKTOP-VVF1AMR\\SQLEXPRESS03;Database=UserManager;Trusted_Connection=True;encrypt=false"
+    "DefaultString": "Server=INTERN-LMTHANH1\\SQLEXPRESS01;Database=UserManager;Trusted_Connection=True;encrypt=false"
   },
   "Logging": {
     "LogLevel": {
