Test Razor Pages

--- a/UserManager.Api/appsettings.json
+++ b/UserManager.Api/appsettings.json
@@ -23,5 +23,11 @@
     "Port": 465,
     "UserName": "luongminhthanh91@gmail.com",
     "Password": "gspqilkwzxhkrqtw"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "24426471174-l6aroepcd0s1u0d7j6ujfatr4o8g85iu.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
