--- a/UserManager.Api/Properties/launchSettings.json
+++ b/UserManager.Api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      //"launchUrl": "swagger",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:9001;http://localhost:5111",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
