--- a/UserManager.Api/appsettings.json
+++ b/UserManager.Api/appsettings.json
@@ -28,6 +28,10 @@
     "Google": {
       "ClientId": "24426471174-l6aroepcd0s1u0d7j6ujfatr4o8g85iu.apps.googleusercontent.com",
       "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "197018693099286",
+      "AppSecret": "75ac4657da27f5b0afd482720f95a242"
     }
   }
 }
